# glim

./: .gitignore  Cargo.toml  README.md  build.rs  import_weights.py  import_weights_llama2_hf.py
cuda-kernels/: arithmetic.cu  indexing.cu  layout.cu  rope.cu
examples/: tiny.rs  tiny_cuda.rs
src/: backend.rs  cpu_backend.rs  cuda_backend.rs  cuda_kernels.rs  device.rs  dtype.rs  dummy_backend.rs  kv_cache.rs  lib.rs  llama.rs  shape.rs  storage.rs  tensor.rs  tensor_view.rs
