[package]
name = "glim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
gemm = { version = "0.17.1", features = ["wasm-simd128-enable"] }
half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"] }
num_cpus = "1.15.0"
num-traits = "0.2.15"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
safetensors = "0.4.3"
byteorder = "1.5.0"
candle = { package = "candle-core", version = "0.5.1", optional = true }
tokenizers = "0.19.1"
cudarc = { version = "0.11.3", features = ["std", "cublas", "cublaslt", "curand", "driver", "nvrtc", "f16", "cuda-version-from-build-system", "dynamic-linking"], default-features=false, optional = true }
candle-kernels = { version = "0.5.1", optional = true }

[build-dependencies]
bindgen_cuda = { version = "0.1.5", optional = true }

[profile.release]
debug = true

[profile.release-no-debug]
inherits = "release"
debug = false

[[example]]
name = "tiny"
path = "examples/tiny.rs"

[[example]]
name = "tiny-cuda"
path = "examples/tiny_cuda.rs"
required-features = ["cuda"]

[features]
default = []
candle = ["dep:candle"]
cuda = ["dep:cudarc", "dep:candle-kernels", "dep:bindgen_cuda"]
